--- a/pure.html
+++ b/pure.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheeseburger - FoodExpress</title>
+    <title>Pure Milk</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <link rel="icon" href="logo.png" type="image/x-ixon">
     <style>
         * {
             margin: 0;
