--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ a{
     <img src="rifat.jpeg" alt="Rifat's Milk bottle" />
     <h3>Rifat's Milk</h3>
     <p class="description">Delicious flavored milk for all ages. High quality creamed milk.</p>
-    <p class="price">৳ 169.69 / Bottle</p>
+    <p class="price">৳ 169.69 / Liter</p>
   </a>
 
 </section>
